--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
 
-    <div class="card-container" onclick="this.classList.toggle('flipped')">
+    <div class="card-container" onclick="this.classList.toggle('active')">
         <div class="card-inner">
             <div class="card-front">
-                <div class="icon">💌</div>
+                <div class="icon">💖</div>
                 <h1>Untuk Kamu</h1>
                 <p class="hint">(Klik untuk membuka surat)</p>
             </div>
@@ -19,7 +19,7 @@
             <div class="card-back">
                 <h2>Happy Valentine's!</h2>
                 <p>
-                    Terima kasih sudah menjadi bagian terbaik dari hariku.
+                   Semoga harimu dipenuhi cinta, kebahagiaan, dan kehangatan dari orang-orang tersayang. Jangan lupa, kamu juga pantas dicintai dan dihargai.
                     <br><br>
                     Keep smiling! :)
                 </p>
